[package]
name = "octopus-relayer"
version = "0.1.0"
authors = ["Yuanchao Sun <yuanchao.sun@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = { version = "1.9.0", features = ["attributes"] }

codec = { version = "2.0.0", package = "parity-scale-codec", features = ["derive"] }
beefy-light-client = { git = "https://github.com/octopus-network/beefy-light-client", branch = "main" }
beefy-primitives = { git = "https://github.com/octopus-network/grandpa-bridge-gadget", branch = "octopus" }
substrate-subxt = { git = "https://github.com/octopus-network/substrate-subxt.git", branch = "octopus" }
sp-runtime = "3.0.0"
sp-core = "3.0.0"
frame-support = "3.0.0"
substrate-subxt-proc-macro = { version = "0.15.0" }
pallet-octopus-appchain = { git = "https://github.com/octopus-network/pallet-octopus-appchain.git" }

[patch.crates-io]
sc-client-api = { git = 'https://github.com/octopus-network/substrate.git', branch = 'master' }
sc-authority-discovery = { git = 'https://github.com/octopus-network/substrate.git', branch = 'master' }
sc-basic-authorship = { git = 'https://github.com/octopus-network/substrate.git', branch = 'master' }
sc-block-builder = { git = 'https://github.com/octopus-network/substrate.git', branch = 'master' }
sc-chain-spec = { git = 'https://github.com/octopus-network/substrate.git', branch = 'master' }
sc-chain-spec-derive = { git = 'https://github.com/octopus-network/substrate.git', branch = 'master' }
sc-cli = { git = 'https://github.com/octopus-network/substrate.git', branch = 'master' }
sc-consensus-aura = { git = 'https://github.com/octopus-network/substrate.git', branch = 'master' }
sc-consensus-babe = { git = 'https://github.com/octopus-network/substrate.git', branch = 'master' }
sc-consensus-babe-rpc = { git = 'https://github.com/octopus-network/substrate.git', branch = 'master' }
sc-consensus = { git = 'https://github.com/octopus-network/substrate.git', branch = 'master' }
sc-consensus-epochs = { git = 'https://github.com/octopus-network/substrate.git', branch = 'master' }
sc-consensus-manual-seal = { git = 'https://github.com/octopus-network/substrate.git', branch = 'master' }
sc-consensus-pow = { git = 'https://github.com/octopus-network/substrate.git', branch = 'master' }
sc-consensus-slots = { git = 'https://github.com/octopus-network/substrate.git', branch = 'master' }
sc-consensus-uncles = { git = 'https://github.com/octopus-network/substrate.git', branch = 'master' }
sc-client-db = { git = 'https://github.com/octopus-network/substrate.git', branch = 'master' }
sc-executor = { git = 'https://github.com/octopus-network/substrate.git', branch = 'master' }
sc-executor-common = { git = 'https://github.com/octopus-network/substrate.git', branch = 'master' }
sc-runtime-test = { git = 'https://github.com/octopus-network/substrate.git', branch = 'master' }
sc-executor-wasmi = { git = 'https://github.com/octopus-network/substrate.git', branch = 'master' }
sc-executor-wasmtime = { git = 'https://github.com/octopus-network/substrate.git', branch = 'master' }
sc-finality-grandpa = { git = 'https://github.com/octopus-network/substrate.git', branch = 'master' }
sc-finality-grandpa-warp-sync = { git = 'https://github.com/octopus-network/substrate.git', branch = 'master' }
sc-informant = { git = 'https://github.com/octopus-network/substrate.git', branch = 'master' }
sc-keystore = { git = 'https://github.com/octopus-network/substrate.git', branch = 'master' }
sc-light = { git = 'https://github.com/octopus-network/substrate.git', branch = 'master' }
sc-network = { git = 'https://github.com/octopus-network/substrate.git', branch = 'master' }
sc-network-gossip = { git = 'https://github.com/octopus-network/substrate.git', branch = 'master' }
sc-network-test = { git = 'https://github.com/octopus-network/substrate.git', branch = 'master' }
sc-offchain = { git = 'https://github.com/octopus-network/substrate.git', branch = 'master' }
sc-peerset = { git = 'https://github.com/octopus-network/substrate.git', branch = 'master' }
sc-proposer-metrics = { git = 'https://github.com/octopus-network/substrate.git', branch = 'master' }
sc-rpc = { git = 'https://github.com/octopus-network/substrate.git', branch = 'master' }
sc-rpc-api = { git = 'https://github.com/octopus-network/substrate.git', branch = 'master' }
sc-rpc-server = { git = 'https://github.com/octopus-network/substrate.git', branch = 'master' }
sc-service = { git = 'https://github.com/octopus-network/substrate.git', branch = 'master' }
sc-service-test = { git = 'https://github.com/octopus-network/substrate.git', branch = 'master' }
sc-state-db = { git = 'https://github.com/octopus-network/substrate.git', branch = 'master' }
sc-sync-state-rpc = { git = 'https://github.com/octopus-network/substrate.git', branch = 'master' }
sc-telemetry = { git = 'https://github.com/octopus-network/substrate.git', branch = 'master' }
sc-tracing = { git = 'https://github.com/octopus-network/substrate.git', branch = 'master' }
sc-tracing-proc-macro = { git = 'https://github.com/octopus-network/substrate.git', branch = 'master' }
sc-transaction-pool = { git = 'https://github.com/octopus-network/substrate.git', branch = 'master' }
sc-transaction-graph = { git = 'https://github.com/octopus-network/substrate.git', branch = 'master' }
frame-support = { git = 'https://github.com/octopus-network/substrate.git', branch = 'master' }
frame-support-procedural = { git = 'https://github.com/octopus-network/substrate.git', branch = 'master' }
frame-support-procedural-tools = { git = 'https://github.com/octopus-network/substrate.git', branch = 'master' }
frame-support-procedural-tools-derive = { git = 'https://github.com/octopus-network/substrate.git', branch = 'master' }
frame-support-test = { git = 'https://github.com/octopus-network/substrate.git', branch = 'master' }
frame-system = { git = 'https://github.com/octopus-network/substrate.git', branch = 'master' }
frame-system-benchmarking = { git = 'https://github.com/octopus-network/substrate.git', branch = 'master' }
frame-system-rpc-runtime-api = { git = 'https://github.com/octopus-network/substrate.git', branch = 'master' }
frame-benchmarking = { git = 'https://github.com/octopus-network/substrate.git', branch = 'master' }
frame-executive = { git = 'https://github.com/octopus-network/substrate.git', branch = 'master' }
frame-metadata = { git = 'https://github.com/octopus-network/substrate.git', branch = 'master' }
pallet-assets = { git = 'https://github.com/octopus-network/substrate.git', branch = 'master' }
pallet-atomic-swap = { git = 'https://github.com/octopus-network/substrate.git', branch = 'master' }
pallet-aura = { git = 'https://github.com/octopus-network/substrate.git', branch = 'master' }
pallet-authority-discovery = { git = 'https://github.com/octopus-network/substrate.git', branch = 'master' }
pallet-authorship = { git = 'https://github.com/octopus-network/substrate.git', branch = 'master' }
pallet-babe = { git = 'https://github.com/octopus-network/substrate.git', branch = 'master' }
pallet-balances = { git = 'https://github.com/octopus-network/substrate.git', branch = 'master' }
pallet-bounties = { git = 'https://github.com/octopus-network/substrate.git', branch = 'master' }
pallet-collective = { git = 'https://github.com/octopus-network/substrate.git', branch = 'master' }
pallet-contracts = { git = 'https://github.com/octopus-network/substrate.git', branch = 'master' }
pallet-contracts-rpc = { git = 'https://github.com/octopus-network/substrate.git', branch = 'master' }
pallet-contracts-rpc-runtime-api = { git = 'https://github.com/octopus-network/substrate.git', branch = 'master' }
pallet-democracy = { git = 'https://github.com/octopus-network/substrate.git', branch = 'master' }
pallet-elections = { git = 'https://github.com/octopus-network/substrate.git', branch = 'master' }
pallet-example = { git = 'https://github.com/octopus-network/substrate.git', branch = 'master' }
pallet-example-offchain-worker = { git = 'https://github.com/octopus-network/substrate.git', branch = 'master' }
pallet-example-parallel = { git = 'https://github.com/octopus-network/substrate.git', branch = 'master' }
pallet-grandpa = { git = 'https://github.com/octopus-network/substrate.git', branch = 'master' }
pallet-identity = { git = 'https://github.com/octopus-network/substrate.git', branch = 'master' }
pallet-im-online = { git = 'https://github.com/octopus-network/substrate.git', branch = 'master' }
pallet-indices = { git = 'https://github.com/octopus-network/substrate.git', branch = 'master' }
pallet-lottery = { git = 'https://github.com/octopus-network/substrate.git', branch = 'master' }
pallet-membership = { git = 'https://github.com/octopus-network/substrate.git', branch = 'master' }
pallet-mmr = { git = 'https://github.com/octopus-network/substrate.git', branch = 'master' }
pallet-mmr-primitives = { git = 'https://github.com/octopus-network/substrate.git', branch = 'master' }
pallet-multisig = { git = 'https://github.com/octopus-network/substrate.git', branch = 'master' }
pallet-nicks = { git = 'https://github.com/octopus-network/substrate.git', branch = 'master' }
pallet-node-authorization = { git = 'https://github.com/octopus-network/substrate.git', branch = 'master' }
pallet-offences = { git = 'https://github.com/octopus-network/substrate.git', branch = 'master' }
pallet-proxy = { git = 'https://github.com/octopus-network/substrate.git', branch = 'master' }
pallet-randomness-collective-flip = { git = 'https://github.com/octopus-network/substrate.git', branch = 'master' }
pallet-recovery = { git = 'https://github.com/octopus-network/substrate.git', branch = 'master' }
pallet-scheduler = { git = 'https://github.com/octopus-network/substrate.git', branch = 'master' }
pallet-scored-pool = { git = 'https://github.com/octopus-network/substrate.git', branch = 'master' }
pallet-session = { git = 'https://github.com/octopus-network/substrate.git', branch = 'master' }
pallet-session-benchmarking = { git = 'https://github.com/octopus-network/substrate.git', branch = 'master' }
pallet-society = { git = 'https://github.com/octopus-network/substrate.git', branch = 'master' }
pallet-staking = { git = 'https://github.com/octopus-network/substrate.git', branch = 'master' }
pallet-staking-reward-curve = { git = 'https://github.com/octopus-network/substrate.git', branch = 'master' }
pallet-sudo = { git = 'https://github.com/octopus-network/substrate.git', branch = 'master' }
pallet-timestamp = { git = 'https://github.com/octopus-network/substrate.git', branch = 'master' }
pallet-transaction-payment = { git = 'https://github.com/octopus-network/substrate.git', branch = 'master' }
pallet-transaction-payment-rpc = { git = 'https://github.com/octopus-network/substrate.git', branch = 'master' }
pallet-transaction-payment-rpc-runtime-api = { git = 'https://github.com/octopus-network/substrate.git', branch = 'master' }
pallet-treasury = { git = 'https://github.com/octopus-network/substrate.git', branch = 'master' }
pallet-tips = { git = 'https://github.com/octopus-network/substrate.git', branch = 'master' }
pallet-utility = { git = 'https://github.com/octopus-network/substrate.git', branch = 'master' }
pallet-vesting = { git = 'https://github.com/octopus-network/substrate.git', branch = 'master' }
sp-allocator = { git = 'https://github.com/octopus-network/substrate.git', branch = 'master' }
sp-api = { git = 'https://github.com/octopus-network/substrate.git', branch = 'master' }
sp-api-proc-macro = { git = 'https://github.com/octopus-network/substrate.git', branch = 'master' }
sp-api-test = { git = 'https://github.com/octopus-network/substrate.git', branch = 'master' }
sp-application-crypto = { git = 'https://github.com/octopus-network/substrate.git', branch = 'master' }
sp-application-crypto-test = { git = 'https://github.com/octopus-network/substrate.git', branch = 'master' }
sp-arithmetic = { git = 'https://github.com/octopus-network/substrate.git', branch = 'master' }
sp-arithmetic-fuzzer = { git = 'https://github.com/octopus-network/substrate.git', branch = 'master' }
sp-authority-discovery = { git = 'https://github.com/octopus-network/substrate.git', branch = 'master' }
sp-authorship = { git = 'https://github.com/octopus-network/substrate.git', branch = 'master' }
sp-block-builder = { git = 'https://github.com/octopus-network/substrate.git', branch = 'master' }
sp-blockchain = { git = 'https://github.com/octopus-network/substrate.git', branch = 'master' }
sp-chain-spec = { git = 'https://github.com/octopus-network/substrate.git', branch = 'master' }
sp-consensus-aura = { git = 'https://github.com/octopus-network/substrate.git', branch = 'master' }
sp-consensus-babe = { git = 'https://github.com/octopus-network/substrate.git', branch = 'master' }
sp-consensus = { git = 'https://github.com/octopus-network/substrate.git', branch = 'master' }
sp-consensus-pow = { git = 'https://github.com/octopus-network/substrate.git', branch = 'master' }
sp-consensus-vrf = { git = 'https://github.com/octopus-network/substrate.git', branch = 'master' }
sp-core = { git = 'https://github.com/octopus-network/substrate.git', branch = 'master' }
sp-database = { git = 'https://github.com/octopus-network/substrate.git', branch = 'master' }
sp-debug-derive = { git = 'https://github.com/octopus-network/substrate.git', branch = 'master' }
sp-externalities = { git = 'https://github.com/octopus-network/substrate.git', branch = 'master' }
sp-finality-grandpa = { git = 'https://github.com/octopus-network/substrate.git', branch = 'master' }
sp-inherents = { git = 'https://github.com/octopus-network/substrate.git', branch = 'master' }
sp-io = { git = 'https://github.com/octopus-network/substrate.git', branch = 'master' }
sp-keyring = { git = 'https://github.com/octopus-network/substrate.git', branch = 'master' }
sp-keystore = { git = 'https://github.com/octopus-network/substrate.git', branch = 'master' }
sp-npos-elections = { git = 'https://github.com/octopus-network/substrate.git', branch = 'master' }
sp-npos-elections-compact = { git = 'https://github.com/octopus-network/substrate.git', branch = 'master' }
sp-npos-elections-fuzzer = { git = 'https://github.com/octopus-network/substrate.git', branch = 'master' }
sp-offchain = { git = 'https://github.com/octopus-network/substrate.git', branch = 'master' }
sp-panic-handler = { git = 'https://github.com/octopus-network/substrate.git', branch = 'master' }
sp-rpc = { git = 'https://github.com/octopus-network/substrate.git', branch = 'master' }
sp-runtime = { git = 'https://github.com/octopus-network/substrate.git', branch = 'master' }
sp-runtime-interface = { git = 'https://github.com/octopus-network/substrate.git', branch = 'master' }
sp-runtime-interface-proc-macro = { git = 'https://github.com/octopus-network/substrate.git', branch = 'master' }
sp-runtime-interface-test = { git = 'https://github.com/octopus-network/substrate.git', branch = 'master' }
sp-runtime-interface-test-wasm = { git = 'https://github.com/octopus-network/substrate.git', branch = 'master' }
sp-runtime-interface-test-wasm-deprecated = { git = 'https://github.com/octopus-network/substrate.git', branch = 'master' }
sp-sandbox = { git = 'https://github.com/octopus-network/substrate.git', branch = 'master' }
sp-serializer = { git = 'https://github.com/octopus-network/substrate.git', branch = 'master' }
sp-session = { git = 'https://github.com/octopus-network/substrate.git', branch = 'master' }
sp-staking = { git = 'https://github.com/octopus-network/substrate.git', branch = 'master' }
sp-state-machine = { git = 'https://github.com/octopus-network/substrate.git', branch = 'master' }
sp-std = { git = 'https://github.com/octopus-network/substrate.git', branch = 'master' }
sp-storage = { git = 'https://github.com/octopus-network/substrate.git', branch = 'master' }
sp-tasks = { git = 'https://github.com/octopus-network/substrate.git', branch = 'master' }
sp-test-primitives = { git = 'https://github.com/octopus-network/substrate.git', branch = 'master' }
sp-timestamp = { git = 'https://github.com/octopus-network/substrate.git', branch = 'master' }
sp-tracing = { git = 'https://github.com/octopus-network/substrate.git', branch = 'master' }
sp-transaction-pool = { git = 'https://github.com/octopus-network/substrate.git', branch = 'master' }
sp-trie = { git = 'https://github.com/octopus-network/substrate.git', branch = 'master' }
sp-utils = { git = 'https://github.com/octopus-network/substrate.git', branch = 'master' }
sp-version = { git = 'https://github.com/octopus-network/substrate.git', branch = 'master' }
sp-wasm-interface = { git = 'https://github.com/octopus-network/substrate.git', branch = 'master' }
substrate-prometheus-endpoint = { git = 'https://github.com/octopus-network/substrate.git', branch = 'master' }

[patch."https://github.com/paritytech/substrate"]
sc-client-api = { git = 'https://github.com/octopus-network/substrate.git', branch = 'master' }
sc-authority-discovery = { git = 'https://github.com/octopus-network/substrate.git', branch = 'master' }
sc-basic-authorship = { git = 'https://github.com/octopus-network/substrate.git', branch = 'master' }
sc-block-builder = { git = 'https://github.com/octopus-network/substrate.git', branch = 'master' }
sc-chain-spec = { git = 'https://github.com/octopus-network/substrate.git', branch = 'master' }
sc-chain-spec-derive = { git = 'https://github.com/octopus-network/substrate.git', branch = 'master' }
sc-cli = { git = 'https://github.com/octopus-network/substrate.git', branch = 'master' }
sc-consensus-aura = { git = 'https://github.com/octopus-network/substrate.git', branch = 'master' }
sc-consensus-babe = { git = 'https://github.com/octopus-network/substrate.git', branch = 'master' }
sc-consensus-babe-rpc = { git = 'https://github.com/octopus-network/substrate.git', branch = 'master' }
sc-consensus = { git = 'https://github.com/octopus-network/substrate.git', branch = 'master' }
sc-consensus-epochs = { git = 'https://github.com/octopus-network/substrate.git', branch = 'master' }
sc-consensus-manual-seal = { git = 'https://github.com/octopus-network/substrate.git', branch = 'master' }
sc-consensus-pow = { git = 'https://github.com/octopus-network/substrate.git', branch = 'master' }
sc-consensus-slots = { git = 'https://github.com/octopus-network/substrate.git', branch = 'master' }
sc-consensus-uncles = { git = 'https://github.com/octopus-network/substrate.git', branch = 'master' }
sc-client-db = { git = 'https://github.com/octopus-network/substrate.git', branch = 'master' }
sc-executor = { git = 'https://github.com/octopus-network/substrate.git', branch = 'master' }
sc-executor-common = { git = 'https://github.com/octopus-network/substrate.git', branch = 'master' }
sc-runtime-test = { git = 'https://github.com/octopus-network/substrate.git', branch = 'master' }
sc-executor-wasmi = { git = 'https://github.com/octopus-network/substrate.git', branch = 'master' }
sc-executor-wasmtime = { git = 'https://github.com/octopus-network/substrate.git', branch = 'master' }
sc-finality-grandpa = { git = 'https://github.com/octopus-network/substrate.git', branch = 'master' }
sc-finality-grandpa-warp-sync = { git = 'https://github.com/octopus-network/substrate.git', branch = 'master' }
sc-informant = { git = 'https://github.com/octopus-network/substrate.git', branch = 'master' }
sc-keystore = { git = 'https://github.com/octopus-network/substrate.git', branch = 'master' }
sc-light = { git = 'https://github.com/octopus-network/substrate.git', branch = 'master' }
sc-network = { git = 'https://github.com/octopus-network/substrate.git', branch = 'master' }
sc-network-gossip = { git = 'https://github.com/octopus-network/substrate.git', branch = 'master' }
sc-network-test = { git = 'https://github.com/octopus-network/substrate.git', branch = 'master' }
sc-offchain = { git = 'https://github.com/octopus-network/substrate.git', branch = 'master' }
sc-peerset = { git = 'https://github.com/octopus-network/substrate.git', branch = 'master' }
sc-proposer-metrics = { git = 'https://github.com/octopus-network/substrate.git', branch = 'master' }
sc-rpc = { git = 'https://github.com/octopus-network/substrate.git', branch = 'master' }
sc-rpc-api = { git = 'https://github.com/octopus-network/substrate.git', branch = 'master' }
sc-rpc-server = { git = 'https://github.com/octopus-network/substrate.git', branch = 'master' }
sc-service = { git = 'https://github.com/octopus-network/substrate.git', branch = 'master' }
sc-service-test = { git = 'https://github.com/octopus-network/substrate.git', branch = 'master' }
sc-state-db = { git = 'https://github.com/octopus-network/substrate.git', branch = 'master' }
sc-sync-state-rpc = { git = 'https://github.com/octopus-network/substrate.git', branch = 'master' }
sc-telemetry = { git = 'https://github.com/octopus-network/substrate.git', branch = 'master' }
sc-tracing = { git = 'https://github.com/octopus-network/substrate.git', branch = 'master' }
sc-tracing-proc-macro = { git = 'https://github.com/octopus-network/substrate.git', branch = 'master' }
sc-transaction-pool = { git = 'https://github.com/octopus-network/substrate.git', branch = 'master' }
sc-transaction-graph = { git = 'https://github.com/octopus-network/substrate.git', branch = 'master' }
frame-support = { git = 'https://github.com/octopus-network/substrate.git', branch = 'master' }
frame-support-procedural = { git = 'https://github.com/octopus-network/substrate.git', branch = 'master' }
frame-support-procedural-tools = { git = 'https://github.com/octopus-network/substrate.git', branch = 'master' }
frame-support-procedural-tools-derive = { git = 'https://github.com/octopus-network/substrate.git', branch = 'master' }
frame-support-test = { git = 'https://github.com/octopus-network/substrate.git', branch = 'master' }
frame-system = { git = 'https://github.com/octopus-network/substrate.git', branch = 'master' }
frame-system-benchmarking = { git = 'https://github.com/octopus-network/substrate.git', branch = 'master' }
frame-system-rpc-runtime-api = { git = 'https://github.com/octopus-network/substrate.git', branch = 'master' }
frame-benchmarking = { git = 'https://github.com/octopus-network/substrate.git', branch = 'master' }
frame-executive = { git = 'https://github.com/octopus-network/substrate.git', branch = 'master' }
frame-metadata = { git = 'https://github.com/octopus-network/substrate.git', branch = 'master' }
pallet-assets = { git = 'https://github.com/octopus-network/substrate.git', branch = 'master' }
pallet-atomic-swap = { git = 'https://github.com/octopus-network/substrate.git', branch = 'master' }
pallet-aura = { git = 'https://github.com/octopus-network/substrate.git', branch = 'master' }
pallet-authority-discovery = { git = 'https://github.com/octopus-network/substrate.git', branch = 'master' }
pallet-authorship = { git = 'https://github.com/octopus-network/substrate.git', branch = 'master' }
pallet-babe = { git = 'https://github.com/octopus-network/substrate.git', branch = 'master' }
pallet-balances = { git = 'https://github.com/octopus-network/substrate.git', branch = 'master' }
pallet-bounties = { git = 'https://github.com/octopus-network/substrate.git', branch = 'master' }
pallet-collective = { git = 'https://github.com/octopus-network/substrate.git', branch = 'master' }
pallet-contracts = { git = 'https://github.com/octopus-network/substrate.git', branch = 'master' }
pallet-contracts-rpc = { git = 'https://github.com/octopus-network/substrate.git', branch = 'master' }
pallet-contracts-rpc-runtime-api = { git = 'https://github.com/octopus-network/substrate.git', branch = 'master' }
pallet-democracy = { git = 'https://github.com/octopus-network/substrate.git', branch = 'master' }
pallet-elections = { git = 'https://github.com/octopus-network/substrate.git', branch = 'master' }
pallet-example = { git = 'https://github.com/octopus-network/substrate.git', branch = 'master' }
pallet-example-offchain-worker = { git = 'https://github.com/octopus-network/substrate.git', branch = 'master' }
pallet-example-parallel = { git = 'https://github.com/octopus-network/substrate.git', branch = 'master' }
pallet-grandpa = { git = 'https://github.com/octopus-network/substrate.git', branch = 'master' }
pallet-identity = { git = 'https://github.com/octopus-network/substrate.git', branch = 'master' }
pallet-im-online = { git = 'https://github.com/octopus-network/substrate.git', branch = 'master' }
pallet-indices = { git = 'https://github.com/octopus-network/substrate.git', branch = 'master' }
pallet-lottery = { git = 'https://github.com/octopus-network/substrate.git', branch = 'master' }
pallet-membership = { git = 'https://github.com/octopus-network/substrate.git', branch = 'master' }
pallet-mmr = { git = 'https://github.com/octopus-network/substrate.git', branch = 'master' }
pallet-mmr-primitives = { git = 'https://github.com/octopus-network/substrate.git', branch = 'master' }
pallet-multisig = { git = 'https://github.com/octopus-network/substrate.git', branch = 'master' }
pallet-nicks = { git = 'https://github.com/octopus-network/substrate.git', branch = 'master' }
pallet-node-authorization = { git = 'https://github.com/octopus-network/substrate.git', branch = 'master' }
pallet-offences = { git = 'https://github.com/octopus-network/substrate.git', branch = 'master' }
pallet-proxy = { git = 'https://github.com/octopus-network/substrate.git', branch = 'master' }
pallet-randomness-collective-flip = { git = 'https://github.com/octopus-network/substrate.git', branch = 'master' }
pallet-recovery = { git = 'https://github.com/octopus-network/substrate.git', branch = 'master' }
pallet-scheduler = { git = 'https://github.com/octopus-network/substrate.git', branch = 'master' }
pallet-scored-pool = { git = 'https://github.com/octopus-network/substrate.git', branch = 'master' }
pallet-session = { git = 'https://github.com/octopus-network/substrate.git', branch = 'master' }
pallet-session-benchmarking = { git = 'https://github.com/octopus-network/substrate.git', branch = 'master' }
pallet-society = { git = 'https://github.com/octopus-network/substrate.git', branch = 'master' }
pallet-staking = { git = 'https://github.com/octopus-network/substrate.git', branch = 'master' }
pallet-staking-reward-curve = { git = 'https://github.com/octopus-network/substrate.git', branch = 'master' }
pallet-sudo = { git = 'https://github.com/octopus-network/substrate.git', branch = 'master' }
pallet-timestamp = { git = 'https://github.com/octopus-network/substrate.git', branch = 'master' }
pallet-transaction-payment = { git = 'https://github.com/octopus-network/substrate.git', branch = 'master' }
pallet-transaction-payment-rpc = { git = 'https://github.com/octopus-network/substrate.git', branch = 'master' }
pallet-transaction-payment-rpc-runtime-api = { git = 'https://github.com/octopus-network/substrate.git', branch = 'master' }
pallet-treasury = { git = 'https://github.com/octopus-network/substrate.git', branch = 'master' }
pallet-tips = { git = 'https://github.com/octopus-network/substrate.git', branch = 'master' }
pallet-utility = { git = 'https://github.com/octopus-network/substrate.git', branch = 'master' }
pallet-vesting = { git = 'https://github.com/octopus-network/substrate.git', branch = 'master' }
sp-allocator = { git = 'https://github.com/octopus-network/substrate.git', branch = 'master' }
sp-api = { git = 'https://github.com/octopus-network/substrate.git', branch = 'master' }
sp-api-proc-macro = { git = 'https://github.com/octopus-network/substrate.git', branch = 'master' }
sp-api-test = { git = 'https://github.com/octopus-network/substrate.git', branch = 'master' }
sp-application-crypto = { git = 'https://github.com/octopus-network/substrate.git', branch = 'master' }
sp-application-crypto-test = { git = 'https://github.com/octopus-network/substrate.git', branch = 'master' }
sp-arithmetic = { git = 'https://github.com/octopus-network/substrate.git', branch = 'master' }
sp-arithmetic-fuzzer = { git = 'https://github.com/octopus-network/substrate.git', branch = 'master' }
sp-authority-discovery = { git = 'https://github.com/octopus-network/substrate.git', branch = 'master' }
sp-authorship = { git = 'https://github.com/octopus-network/substrate.git', branch = 'master' }
sp-block-builder = { git = 'https://github.com/octopus-network/substrate.git', branch = 'master' }
sp-blockchain = { git = 'https://github.com/octopus-network/substrate.git', branch = 'master' }
sp-chain-spec = { git = 'https://github.com/octopus-network/substrate.git', branch = 'master' }
sp-consensus-aura = { git = 'https://github.com/octopus-network/substrate.git', branch = 'master' }
sp-consensus-babe = { git = 'https://github.com/octopus-network/substrate.git', branch = 'master' }
sp-consensus = { git = 'https://github.com/octopus-network/substrate.git', branch = 'master' }
sp-consensus-pow = { git = 'https://github.com/octopus-network/substrate.git', branch = 'master' }
sp-consensus-vrf = { git = 'https://github.com/octopus-network/substrate.git', branch = 'master' }
sp-core = { git = 'https://github.com/octopus-network/substrate.git', branch = 'master' }
sp-database = { git = 'https://github.com/octopus-network/substrate.git', branch = 'master' }
sp-debug-derive = { git = 'https://github.com/octopus-network/substrate.git', branch = 'master' }
sp-externalities = { git = 'https://github.com/octopus-network/substrate.git', branch = 'master' }
sp-finality-grandpa = { git = 'https://github.com/octopus-network/substrate.git', branch = 'master' }
sp-inherents = { git = 'https://github.com/octopus-network/substrate.git', branch = 'master' }
sp-io = { git = 'https://github.com/octopus-network/substrate.git', branch = 'master' }
sp-keyring = { git = 'https://github.com/octopus-network/substrate.git', branch = 'master' }
sp-keystore = { git = 'https://github.com/octopus-network/substrate.git', branch = 'master' }
sp-npos-elections = { git = 'https://github.com/octopus-network/substrate.git', branch = 'master' }
sp-npos-elections-compact = { git = 'https://github.com/octopus-network/substrate.git', branch = 'master' }
sp-npos-elections-fuzzer = { git = 'https://github.com/octopus-network/substrate.git', branch = 'master' }
sp-offchain = { git = 'https://github.com/octopus-network/substrate.git', branch = 'master' }
sp-panic-handler = { git = 'https://github.com/octopus-network/substrate.git', branch = 'master' }
sp-rpc = { git = 'https://github.com/octopus-network/substrate.git', branch = 'master' }
sp-runtime = { git = 'https://github.com/octopus-network/substrate.git', branch = 'master' }
sp-runtime-interface = { git = 'https://github.com/octopus-network/substrate.git', branch = 'master' }
sp-runtime-interface-proc-macro = { git = 'https://github.com/octopus-network/substrate.git', branch = 'master' }
sp-runtime-interface-test = { git = 'https://github.com/octopus-network/substrate.git', branch = 'master' }
sp-runtime-interface-test-wasm = { git = 'https://github.com/octopus-network/substrate.git', branch = 'master' }
sp-runtime-interface-test-wasm-deprecated = { git = 'https://github.com/octopus-network/substrate.git', branch = 'master' }
sp-sandbox = { git = 'https://github.com/octopus-network/substrate.git', branch = 'master' }
sp-serializer = { git = 'https://github.com/octopus-network/substrate.git', branch = 'master' }
sp-session = { git = 'https://github.com/octopus-network/substrate.git', branch = 'master' }
sp-staking = { git = 'https://github.com/octopus-network/substrate.git', branch = 'master' }
sp-state-machine = { git = 'https://github.com/octopus-network/substrate.git', branch = 'master' }
sp-std = { git = 'https://github.com/octopus-network/substrate.git', branch = 'master' }
sp-storage = { git = 'https://github.com/octopus-network/substrate.git', branch = 'master' }
sp-tasks = { git = 'https://github.com/octopus-network/substrate.git', branch = 'master' }
sp-test-primitives = { git = 'https://github.com/octopus-network/substrate.git', branch = 'master' }
sp-timestamp = { git = 'https://github.com/octopus-network/substrate.git', branch = 'master' }
sp-tracing = { git = 'https://github.com/octopus-network/substrate.git', branch = 'master' }
sp-transaction-pool = { git = 'https://github.com/octopus-network/substrate.git', branch = 'master' }
sp-trie = { git = 'https://github.com/octopus-network/substrate.git', branch = 'master' }
sp-utils = { git = 'https://github.com/octopus-network/substrate.git', branch = 'master' }
sp-version = { git = 'https://github.com/octopus-network/substrate.git', branch = 'master' }
sp-wasm-interface = { git = 'https://github.com/octopus-network/substrate.git', branch = 'master' }
substrate-prometheus-endpoint = { git = 'https://github.com/octopus-network/substrate.git', branch = 'master' }
